--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -12,6 +12,12 @@ jobs:
     steps:
       - uses: actions/checkout@v1
 
+      - name: Setup Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '11'
+
       - name: Generate document
         run: ./gradlew dokka
 
