--- a/.github/workflows/doc.yml
+++ b/.github/workflows/doc.yml
@@ -19,7 +19,7 @@ jobs:
           java-version: '11'
 
       - name: Generate document
-        run: ./gradlew dokka
+        run: ./gradlew dokkaHtml
 
       - name: Commit files
         env:
